example using kettle-ui form

--- a/example/index.html
+++ b/example/index.html
@@ -6,11 +6,7 @@
     <title>Biro</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      input:-webkit-autofill {
-          -webkit-box-shadow: 0 0 0 1000px white inset !important;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="main.css">
   </head>
 
   <body>
